title slide - style and slides link

--- a/presentation/dev-summit-2021.html
+++ b/presentation/dev-summit-2021.html
@@ -19,7 +19,7 @@
 	<div class="reveal">
 		<div class="slides">
 			<section data-background="img/2021/dev-summit/bg-1.png" data-background-size="cover">
-				<h1 style="text-align: left; font-size: 80px;">
+				<h1 style="text-align: left; font-size: 70px;">
 					Working with Location Services with ArcGIS REST JS
 				</h1>
 				<p style="text-align: left; font-size: 30px;">
@@ -32,8 +32,7 @@
 					<a href="https://github.com/jwasilgeo">@jwasilgeo</a>
 				</p>
 				<p style="text-align: left; font-size: 30px;">
-					slides:
-					<a href="http://bit.ly/abc123"><code>http://bit.ly/abc123</code></a>
+					Slides: <a href="https://esriurl.com/ds21rest"><code>esriurl.com/ds21rest</code></a>
 				</p>
 			</section>
 
