routing - initial content

--- a/presentation/dev-summit-2021.html
+++ b/presentation/dev-summit-2021.html
@@ -48,11 +48,26 @@
 
 			<!-- BEGIN ROUTING SECTION -->
 
-			<section data-markdown data-background="img/2021/dev-summit/bg-4.png">
+			<section data-markdown data-background="img/2021/dev-summit/bg-2.png">
 				<textarea data-template>
 					## Routing
 
-					* Info
+					![Routing example map](img/routing.png)
+					
+					[esri.github.io/arcgis-rest-js/api/routing](https://esri.github.io/arcgis-rest-js/api/routing/)
+				</textarea>
+			</section>
+
+			<section data-markdown data-background="img/2021/dev-summit/bg-2.png">
+				<textarea data-template>
+					## Routing
+
+					* Basic: Solve Route
+					* Others:
+						* Closest Facility
+						* Service Area
+						* Travel Cost Matrix
+					
 				</textarea>
 			</section>
 
