Add intro slides

--- a/presentation/dev-summit-2021.html
+++ b/presentation/dev-summit-2021.html
@@ -36,6 +36,44 @@
 				</p>
 			</section>
 
+			<!-- BEGIN INTRO SECTION -->
+			<section data-markdown data-background="img/2021/dev-summit/bg-2.png">
+				<textarea data-template>
+					### What's REST JS? 
+
+					* Access ArcGIS location services, ArcGIS Online and ArcGIS Enterprise REST APIs
+
+					* Docs at [developers.arcgis.com/arcgis-rest-js](https://developers.arcgis.com/arcgis-rest-js/)
+
+					* REST JS is [open source](https://esri.github.io/arcgis-rest-js/)! 
+				</textarea>
+
+				<aside class="notes">
+					* a lightweight, modular library
+					* modern browsers and node.js
+					* framework-agnostic
+					* What it's not - no mapping or client-side visualization tools (use the JS API)
+					* in this talk, concentrating just on location services - for more on managing organizations, users, groups and content, check out the DevSummit session "Rest JS: Working with Users, Groups, Items, and Features"
+				</aside>
+			</section>
+
+			<section data-markdown data-background="img/2021/dev-summit/bg-2.png">
+				<textarea data-template>
+					### Before we begin: API Keys 
+
+					<image src="img/dashboard.png" alt="Dashboard screenshot" width="500"></image>
+					* [How to get an API Key](https://developers.arcgis.com/arcgis-rest-js/)
+					* [Learn more about API Keys](https://developers.arcgis.com/documentation/security-and-authentication/api-keys/)
+				</textarea>
+
+				<aside class="notes">
+					- a unique key to authenticate a developer to the ArcGIS Platform
+					- used for accessing specific location service
+					- To get a key - log in to your ArcGIS account or sign up for a developer account, go to your dashboard. 
+					- you can use API keys or ArcGIS identity (OAuth 2.0) with rest-js. Check out the security and authentication guide on the developers' website or the DevSummit talk 'Authentication in ArcGIS`
+        </aside>
+			</section>
+
 			<!-- BEGIN GEOCODING SECTION -->
 
 			<section data-markdown data-background="img/2021/dev-summit/bg-4.png">
