layers slides modifications

--- a/presentation/dev-summit-2021.html
+++ b/presentation/dev-summit-2021.html
@@ -207,7 +207,7 @@
 					import {
 					  addFeatures,
 					  updateFeatures,
-					  deleteFeatures,
+					  deleteFeatures
 					} from "@esri/arcgis-rest-feature-layer";
 
 					addFeatures({
