--- a/presentation/dev-summit-2021.html
+++ b/presentation/dev-summit-2021.html
@@ -62,7 +62,7 @@
 					### Before we begin: API Keys 
 
 					<image src="img/dashboard.png" alt="Dashboard screenshot" width="500"></image>
-					* [How to get an API Key](https://developers.arcgis.com/arcgis-rest-js/)
+					* [How to get an API Key](https://developers.arcgis.com/arcgis-rest-js/#get-started)
 					* [Learn more about API Keys](https://developers.arcgis.com/documentation/security-and-authentication/api-keys/)
 				</textarea>
 
@@ -76,12 +76,102 @@
 
 			<!-- BEGIN GEOCODING SECTION -->
 
-			<section data-markdown data-background="img/2021/dev-summit/bg-4.png">
+			<section data-markdown data-background="img/2021/dev-summit/bg-5.png">
 				<textarea data-template>
 					## Geocoding
 
-					* Info
+					<image src="img/geocoding.png" alt="Geocoding place search example" width="700"></image>
+
+					[esri.github.io/arcgis-rest-js/api/geocoding](https://esri.github.io/arcgis-rest-js/api/geocoding/)
 				</textarea>
+
+				<aside class="notes">
+					- Geocoding aka address search
+					- process of converting text for an address or landmark to a complete address with a precise location
+					- You can use geocoding to find the location of an address, convert address text to a complete address, provide a list of suggestions for an incomplete address 
+					- Place search aka point of interest or POI search - searching for businesses, administrative boundaries, geographic features.
+					- Place search can also locate places by category such as restaurants, coffee shops, schools
+        </aside>
+			</section>
+
+			<section data-markdown data-background="img/2021/dev-summit/bg-2.png">
+				<textarea data-template>
+					## Geocoding
+
+					* [geocode](https://esri.github.io/arcgis-rest-js/api/geocoding/geocode/)
+					* [suggest](https://esri.github.io/arcgis-rest-js/api/geocoding/suggest/)
+					* [bulk geocode](https://esri.github.io/arcgis-rest-js/api/geocoding/bulkGeocode/)
+					* [reverse geocode](https://esri.github.io/arcgis-rest-js/api/geocoding/reverseGeocode/)
+
+					[Learn more about the geocoding service](https://developers.arcgis.com/documentation/mapping-apis-and-location-services/geocode-and-search/)
+
+				</textarea>
+				<aside class="notes">
+					- here are the main rest-js helpers from the geocoding package. these wrap the geocoding service itself.
+					- geocode is used for geocoding and place search
+					- suggest is used to fetch placename suggestions for a partial string
+					- bulk geocoding is used to geocode multiple addresses at once
+					- reverse geocoding determines the address of a supplied location
+				</aside>
+			</section>
+
+			<section data-markdown data-background="img/2021/dev-summit/bg-2.png">
+				<textarea data-template>
+					### Find an address
+
+					<image src="img/geocoding-snippet-1.png" alt="Geocoding place search example" width="700"></image>
+
+					* [IGeocodeOptions](https://esri.github.io/arcgis-rest-js/api/geocoding/IGeocodeOptions/)
+					* [Full tutorial and code](https://developers.arcgis.com/arcgis-rest-js/geocode-and-search/search-for-an-address/)
+				</textarea>
+				<aside class="notes">
+					- import the geocode method (or use the CDN url)
+					- set up API Key
+					- Set up the params to be passed along to geocode. Bc rest-js is written in typescript, we have handy interfaces that allow us to see the shape of our options option and the response
+				</aside>
+			</section>
+
+			<section data-markdown data-background="img/2021/dev-summit/bg-2.png">
+				<textarea data-template>
+					### Place search 
+
+					<image src="img/geocoding-snippet-2.png" alt="Geocoding place search example" width="700"></image>
+
+					* [Full tutorial and code](https://developers.arcgis.com/arcgis-rest-js/geocode-and-search/find-places/)
+					* [Learn more about place search](https://developers.arcgis.com/documentation/mapping-apis-and-location-services/geocode-and-search/place-search/)
+				</textarea>
+				<aside class="notes">
+					- geocode is powerful. in addition to address data, we can also pass along additional info in the params object, which allow us to search for types of locations, a location to focus our search, define a search radius, etc. 
+				</aside>
+			</section>
+
+			<section data-markdown data-background="img/2021/dev-summit/bg-5.png">
+				<textarea data-template>
+					## Geocoding
+
+					[Demo](https://github.com/araedavis/react-geocoder)
+
+					* REST JS: request, auth, geocoding packages
+					* React
+					* [Downshift](https://github.com/downshift-js/downshift)
+
+				</textarea>
+				<aside class="notes">
+					- Demo - React component originally created by a user.
+					- text input with auto complete that suggests locations
+					- Downshift is a library that simplifies building accessible dropdowns, inputs, etc in React
+					(demo component)
+					- note score in response: API provides a quality score to see how good the match is
+					What's going on in code: 
+					if menu is open, suggest component calls a useEffect every time the address string changes
+					- Debounce prevents an API call with every single keystroke and improves performances 
+					- rest-js suggest method: point out params, how api key is passed 
+
+					- in addition to the text result, suggest provides a magicKey string - links a suggestion to an address or place. - magic Keys are not permanent across versions of the World Geocoding search and thus shouldn't be stored by a client application, but instead only used as a parameter for the geocode call.  
+	
+					- Downshift handles onChange behavior. When user selects a result, we pass magicKey to rest-js geocode function along with our maxLocations and api key. 
+
+				</aside>
 			</section>
 
 			<!-- BEGIN ROUTING SECTION -->
