--- a/presentation/dev-summit-2021.html
+++ b/presentation/dev-summit-2021.html
@@ -339,6 +339,13 @@
 			<section data-background="img/2021/dev-summit/bg-5.png">
 				<img src="img/esri-science-logo-white.png" />
 			</section>
+
+			<!-- Survey Slide-->
+			<section data-markdown data-background="img/2021/dev-summit/bg-5.png">
+				<textarea data-template>
+					Please provide your feedback for this session by clicking on the session survey link directly below the video.
+				</textarea>
+			</section>
 		</div>
 	</div>
 
