--- a/presentation/dev-summit-2021.html
+++ b/presentation/dev-summit-2021.html
@@ -23,7 +23,7 @@
 					Working with Location Services with ArcGIS REST JS
 				</h1>
 				<p style="text-align: left; font-size: 30px;">
-					Allison Davis, Noah Mulfinger, Gavin Rehkemper, Jacob Wasilkowski
+					A. Davis, Noah Mulfinger, Gavin Rehkemper, Jacob Wasilkowski
 				</p>
 				<p style="text-align: left; font-size: 30px;">
 					<a href="https://github.com/araedavis">@araedavis</a>,
